# csu-notice-bot

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
csu_notice/: __init__.py  config.py  data.py  data_source.py  filter.py  handle.py  parser.py  rss.py  util.py  utils.py
