[tool.poetry]
name = "csu-notice"
version = "0.1.0-alpha.4"
description = "CSU Notice"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0a15"
nonebot-adapter-cqhttp = "^2.0.0a15"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
